--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M29P3FJ8SV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-M29P3FJ8SV');
+</script>
     <meta charset="utf-8">
     
     <script defer src="https://cloud.umami.is/script.js" data-website-id="bf8c6dd3-bc51-4bcf-bb27-581866c5af20"></script>
