--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <meta name="framer-search-index" content="https://framerusercontent.com/sites/30XFIzjHqwLxPtVIB8EYLP/searchIndex-8hnTgrqciE13.json">
     <meta name="framer-search-index-fallback" content="https://framerusercontent.com/sites/30XFIzjHqwLxPtVIB8EYLP/searchIndex-aFmTqYclz4hr.json">
      <link rel="canonical" href="https://bloho.xyz/">
+     <link rel="sitemap" type="application/xml" title="Sitemap" href="https://bloho.xyz/sitemap.xml" />
     <link href="https://framerusercontent.com/images/U57oM1jrpH9pg5vqaSka3j40HPk.png" rel="icon" media="(prefers-color-scheme: light)">
     <link href="https://framerusercontent.com/images/U5e7fmh2PdjPxkb8sQTK7OassE.png" rel="icon" media="(prefers-color-scheme: dark)">
     <link rel="apple-touch-icon" href="https://framerusercontent.com/images/N4jxqZlHBS9gSfxw9BXtfzyQwq0.png">
